# MAESA-Agent

./: .gitignore  README.md  SKILL.md
agents/: openai.yaml
arcgis_steps/: area_statistics.md  cartographic_outputs.md  pim_wdat_to_subsidence_raster.md  plus_driver_preprocessing.md  projection_resample.md
config/: data_sources.md  local_paths.example.json
deep_learning/: pytorch_workflow.md
docs/: agent_input_contract.md
ecosystem_service/: ecosystem_service_workflow.md  invest_water_yield_habitat_workflow.md
envi_classification/: accuracy_assessment.md  export_to_arcgis.md  roi_sample_rules.md  supervised_classification.md
execution/: execution_contract.md  software_adapters.md
gee_codes/: climate_download.js  dem_slope_download.js  landsat_lulc_input.js  ndwi_monthly_download.js  population_download.js  sentinel2_lulc_input.js
interfaces/: backend_protocol.md  backend_registry.example.json
invest_carbon/: carbon_density_rules.md  subsidence_water_carbon.md
mcp_server/: mining_mcp_server.py  pyproject.toml
open_gis_workflows/: data_discovery.md  gdal_batch_processing.md  validation_and_manifest.md
plus_model/: calibration_validation.md  conversion_rules.md  driver_factors.md  pim_subsidence_driver.md  plus_workflow.md  scenario_setting.md
scripts/: analysis_validation.py  arcgis_ops.py  artifact_manifest.py  assemble_validation_evidence.py  bridge_server.py  ecosystem_analysis.py  ecosystem_backend.py  ecosystem_service.py  envi_maximum_likelihood.pro  envi_minimum_distance.pro  invest_consistency.py  invest_ecosystem_contract.py  job_worker.py  (+25 more)
(+67 files in other folders)
